- Adjust vertical paddings of Cargo box images on iPhone - Decrease horizontal paddings of CardList - Fix the problem that doesn't show images of the cards

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ html {
     color: var(--text-default-color);
     line-height: 1.2;
     word-wrap: break-word;
+    overflow-x: hidden;
 }
 body {
     /* background: #eee; */
