--- a/src/components/views/MainCardList.css
+++ b/src/components/views/MainCardList.css
@@ -1,7 +1,7 @@
 .section-cardlist {
     /* background-color: #333; */
     /* text-align: center; */
-    padding: 60px 50px 20px;
+    padding: 60px 20px 20px;
 }
 
 .section-cardlist-heading {
